feat: add menu api
